--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
+    "framer-motion": "^6.3.3",
     "gsap": "^3.9.1",
     "react": "^17.0.2",
     "react-colorful": "^5.5.1",
