--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.54.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
