--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.0.0-alpha.3",
     "@date-io/date-fns": "^2.14.0",
     "@mui/icons-material": "^5.4.4",
-    "@mui/styled-engine-sc": "^5.8.0",
-    "@mui/styles": "^5.4.4",
-    "@mui/x-date-pickers": "^5.0.0-alpha.3",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -23,13 +19,12 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.54.9",
-    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "run build",
+    "test": "run test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
