--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.9.1",
     "react": "^17.0.2",
     "react-colorful": "^5.5.1",
+    "react-day-picker": "^8.3.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
