--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,6 @@
     "@date-io/date-fns": "^2.14.0",
     "@mui/icons-material": "^5.4.4",
     "@reduxjs/toolkit": "^1.8.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.3.3",
     "gsap": "^3.9.1",
@@ -25,8 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "run build",
-    "test": "run test",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3"
   }
 }
