--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-colorful": "^5.5.1",
     "react-day-picker": "^8.3.0",
     "react-dom": "^17.0.2",
+    "react-password-strength-bar": "^0.4.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
