--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "set NODE_ENV=dev && node server.js",
     "dev": "nodemon server.js",
     "test": "jest"
   },
@@ -14,6 +14,7 @@
   "dependencies": {
     "aws-sdk": "^2.1248.0",
     "bcrypt": "^5.0.1",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
