--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^2.28.0",
     "framer-motion": "^6.3.3",
     "gsap": "^3.9.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-colorful": "^5.5.1",
     "react-day-picker": "^8.3.0",
