--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-colorful": "^5.6.1",
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-password-strength-bar": "^0.4.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
