--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.16.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "date-fns": "^2.29.3",
     "framer-motion": "^10.0.1",
     "lodash": "^4.17.21",
@@ -14,13 +15,12 @@
     "react-password-strength-bar": "^0.4.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
     "sass": "^1.58.3",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,6 +45,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3"
+    "@testing-library/user-event": "^14.4.3",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "vite": "^4.2.1",
+    "vite-plugin-svgr": "^2.4.0"
   }
 }
