--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^3.1.1"
   },
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
