--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
+    "passport-google-one-tap": "^1.0.0",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0"
   },
