--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "set NODE_ENV=dev && node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=20000"
   },
   "keywords": [],
   "author": "",
