--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,11 @@
     "sass": "^1.58.3",
     "web-vitals": "^3.1.1"
   },
+  "type": "module",
   "scripts": {
     "start": "vite --host",
     "build": "vite build",
-    "test": "react-scripts test",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,6 +48,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "jest": "^29.7.0",
     "vite": "^4.2.1",
     "vite-plugin-svgr": "^2.4.0"
   }
