--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "date-fns": "^2.29.3",
     "framer-motion": "^10.12.16",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
