--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "jest": "^29.7.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "vite": "^4.2.1",
     "vite-plugin-svgr": "^2.4.0"
   }
