fix(server): maybe fix cors error??

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,9 +10,12 @@
     {
       "src": "/(.*)",
       "dest": "/",
-      "methods": ["GET", "POST"],
+      "methods": ["POST", "OPTIONS", "GET", "PATCH", "DELETE", "PUT"],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Headers": "Authorization, Access-Control-Allow-Origin, Access-Control-Allow-Methods, Access-Control-Allow-Headers, Access-Control-Allow-Credentials, Access-Control-Expose-Headers, X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,DELETE,PATCH,POST,PUT"
       }
     }
   ]
