--- a/server/vercel.json
+++ b/server/vercel.json
@@ -14,7 +14,7 @@
       "headers": {
         "Access-Control-Allow-Headers": "Authorization, Access-Control-Allow-Origin, Access-Control-Allow-Methods, Access-Control-Allow-Headers, Access-Control-Allow-Credentials, Access-Control-Expose-Headers, X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
         "Access-Control-Allow-Credentials": "true",
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "https://productivity-hub-website.vercel.app",
         "Access-Control-Allow-Methods": "GET,DELETE,PATCH,POST,PUT"
       }
     }
