fix(client): task throws error with poplayout feat: completely revamp currentProgress feat: group tasks when in same category

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,8 +1,8 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".", // Ensures absolute paths are resolved from project root
-      "paths": {
-        "@/*": ["src/*"] // Maps '@' alias to 'src' directory
-      }
-    }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
   }
+}
