--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
-    "web-vitals": "^3.1.1"
+    "vite-plugin-pwa": "^0.20.0",
+    "web-vitals": "^3.1.1",
+    "workbox-background-sync": "^7.1.0"
   },
   "type": "module",
   "scripts": {
