--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "date-fns": "^2.29.3",
     "framer-motion": "^10.12.16",
+    "idb": "^8.0.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
