--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/cli": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
     "@date-io/date-fns": "^2.16.0",
+    "@react-oauth/google": "^0.12.1",
     "@vitejs/plugin-react": "^3.1.0",
     "date-fns": "^2.29.3",
     "framer-motion": "^10.12.16",
