fix: server entries don't get synced to db from server fix: display is not standalone in manifest.json

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,7 @@
 {
  "name": "Taskflow",
  "short_name": "Taskflow",
+ "display": "standalone",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
